--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@ body {
   background-color: #011F3F;
 }
 
+#instruction {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1.5rem;
+  margin: 8%;
+  color: #FEF2BF;
+}
+
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
