--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,15 @@ body {
 
 #instruction, p {
   font-family: 'Press Start 2P', cursive;
-  font-size: 1.5rem;
-  margin: 2% 8%;
+  font-size: .7rem;
+  margin: 2% 1%;
   color: #FEF2BF;
 }
 
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
-  margin:  5%;
+  margin: 5%;
   color: #FEF2BF;
 }
 
