--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 #instruction, p {
-  font-family: 'Press Start 2P', cursive;
+  font-family: cursive;
   font-size: .7rem;
   margin: 2% 1%;
   color: #FEF2BF;
