--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 #instruction, p {
   font-family: cursive;
-  font-size: .7rem;
+  font-size: 1.3rem;
   margin: 2% 1%;
   color: #FEF2BF;
 }
