--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ body {
   background-color: #011F3F;
 }
 
-#instruction, p {
+#instruction {
   font-family: cursive;
-  font-size: 1.3rem;
-  margin: 2% 1%;
+  font-size: 2rem;
+  margin: 4% 2%;
   color: #FEF2BF;
 }
 
